kubernetes/apps/default/bluebubbles/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bluebubbles
subsets:
- addresses:
  - ip: ${SECRET_BLUEBUBBLES_IP}
  ports:
  - name: https
    port: 51234
    protocol: TCP
