kubernetes/apps/default/bluebubbles/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bluebubbles
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 51234
  sessionAffinity: None
  type: ClusterIP
