kubernetes/apps/default/bluebubbles/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app bluebubbles
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
  - host: &host bluebubbles.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: *app
            port:
              number: 443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - *host
